footer siempre abajo

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,29 @@
-main {
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  min-height: calc(100vh - 96px);
+* {
+  box-sizing: border-box;
+}
+nav {
+  width: 100%;
 }
 
 footer {
+  width: 100%;
+  text-align: center;
+  padding: 1em;
   align-self: flex-end;
-  height: 40px;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 100vh;
+}
+main {
+  padding: 1em;
+}
+
 .image {
   margin-top: -70px;
 }
