--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 nav {
   width: 100%;
 }
@@ -13,6 +14,7 @@ footer {
 }
 
 body {
+  font-family: "Nunito", sans-serif;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
@@ -20,8 +22,21 @@ body {
   flex-wrap: wrap;
   min-height: 100vh;
 }
+
 main {
   padding: 1em;
+}
+
+.card:hover {
+  box-shadow: rgba(236, 82, 82, 0.35) 0px 5px 15px;
+}
+
+.image:hover {
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .image {
